Fixing overflow issues with splitter

--- a/app/styles/less/shelf.less
+++ b/app/styles/less/shelf.less
@@ -23,7 +23,6 @@ div[role=shelf] div[role=shelf-container] {
   width: 100%;
   height: 100%;
   overflow: auto;
-  padding: 0 20px;
 }
 
 div[role=shelf] > div[role=shelf-tab] {
@@ -57,7 +56,7 @@ div[role=shelf] ul[role=sections] {
 
 div[role=shelf] ul[role=sections] > li[role=section] {
   padding: 10px 0;
-  margin-right: 15px;
+  margin-left: 20px;
   text-transform: uppercase;
   list-style-type: none;
   font-size: 11px;
