--- a/app/styles/less/splitter.less
+++ b/app/styles/less/splitter.less
@@ -4,6 +4,7 @@ div .noselect {
 
 [ng-splitter] {
   position: relative;
+  z-index: 101;
 
   flex: 0;
 
